--- a/capstone/obelisk/templates/obelisk/index.html
+++ b/capstone/obelisk/templates/obelisk/index.html
@@ -2,7 +2,11 @@
 {% load static %}
 
 {% block body %}
-    <h3>Hello</h3>
+    <h3>Welcome to the Obelisk</h3>
+    <h4>Part game. Part social experiment</h4>
+    <p>The obelisk is a digital artifact placed here since (insert launch date/time).</p>
+    <p>True to the laws of nature in the physical world, this digital artifact will decay over time only accelerate by the amount of visits it gets</p>
+    <p>You have the choice to either help its repair or destruction. Here's how the game works:</p>
 {% endblock %}
 
 {% block script %}
