--- a/city3d/templates/city3d/layout.html
+++ b/city3d/templates/city3d/layout.html
@@ -5,11 +5,13 @@
     <head>
         <title>{% block title %}Artifact{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Cesium.js"></script>
+        <link href="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
         <link href="{% static 'obelisk/styles.css' %}" rel="stylesheet">
         {% block script %}
         {% endblock %}
     </head>
-    <body>        
+    <body>
         <div class="body">
             {% block body %}
             {% endblock %}
