--- a/city3d/templates/city3d/test.html
+++ b/city3d/templates/city3d/test.html
@@ -1,43 +1,32 @@
-<!DOCTYPE html>
+{% extends "city3d/layout.html" %}
+{% load static %}
 
-<html lang="en">
+{% block body %}
+  <div id="cesiumContainer">
+    <script>
+      // Your access token can be found at: https://cesium.com/ion/tokens.
+      // This is the default access token from your ion account
+      Cesium.Ion.defaultAccessToken = "{{ token }}";
 
-<head>
+      // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
+      const viewer = new Cesium.Viewer('cesiumContainer', {
+        terrainProvider: Cesium.createWorldTerrain()
+      });
 
-  <meta charset="utf-8">
+      // Add Cesium OSM Buildings, a global 3D buildings layer.
+      const buildingTileset = viewer.scene.primitives.add(Cesium.createOsmBuildings());
 
-  <!-- Include the CesiumJS JavaScript and CSS files -->
+      // Fly the camera to San Francisco at the given longitude, latitude, and height.
+      viewer.camera.flyTo({
+        destination : Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
+        orientation : {
+          heading : Cesium.Math.toRadians(0.0),
+          pitch : Cesium.Math.toRadians(-15.0),
+        }
+      });
+    </script>
+ </div>
+{% endblock %}
 
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Cesium.js"></script>
-
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.88/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-
-</head>
-
-<body>
-      <div id="cesiumContainer">
-        <script>
-          // Your access token can be found at: https://cesium.com/ion/tokens.
-          // This is the default access token from your ion account
-          Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIyM2JkNGUxYy0xMjU5LTRjMjQtODY1NC0wNmNiMDRmZTNkN2MiLCJpZCI6Nzc3NDMsImlhdCI6MTY0MDU1ODUzNH0.fWdgfrOstvfFJ0xErdEphQwA6ZGVQCVBosbrXt0xY4Q';
-
-          // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
-          const viewer = new Cesium.Viewer('cesiumContainer', {
-            terrainProvider: Cesium.createWorldTerrain()
-          });
-
-          // Add Cesium OSM Buildings, a global 3D buildings layer.
-          const buildingTileset = viewer.scene.primitives.add(Cesium.createOsmBuildings());
-
-          // Fly the camera to San Francisco at the given longitude, latitude, and height.
-          viewer.camera.flyTo({
-            destination : Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
-            orientation : {
-              heading : Cesium.Math.toRadians(0.0),
-              pitch : Cesium.Math.toRadians(-15.0),
-            }
-          });
-        </script>
-     </div>
-  </body>
-</html>
+{% block script %}
+{% endblock %}
