--- a/city3d/static/city3d/styles.css
+++ b/city3d/static/city3d/styles.css
@@ -9,6 +9,13 @@ body {
   height: 100%;
 }
 
+#bg-image {
+  background: url("/static/images/USA.jpeg") 50% 0 no-repeat fixed;
+  color: white;
+  height: 650px;
+  padding: 100px 0 0 0;
+}
+
 #cesiumContainer {
  z-index: -999
 }
