--- a/city3d/templates/city3d/city.html
+++ b/city3d/templates/city3d/city.html
@@ -86,7 +86,7 @@
       <!-- <button id="sidebarToggle" type="button" class="btn btn-light" data-bs-toggle="sidebarRight" data-bs-target="#sidebarRight" style="position: relative; top: 1em; left: 1em; z-index: 11">Toggle Sidebar</button> -->
       <div id="map" style="width: 100%; height: 100%; background-color: blue;"></div>
       <script>
-      	// mapboxgl.accessToken = 'pk.eyJ1IjoiYml0dG9yaW4iLCJhIjoiY2t5Yjdsa2hlMGN2NDJwcWhxbWl6MzVodiJ9.cys7ArUXpKUr4UOJl7nYzw';
+      	// mapboxgl.accessToken = '{{ token }}';
         //   const map = new mapboxgl.Map({
         //       container: 'map',
         //       style: 'mapbox://styles/mapbox/light-v10',
