--- a/city3d/templates/city3d/layout.html
+++ b/city3d/templates/city3d/layout.html
@@ -11,9 +11,31 @@
         {% endblock %}
     </head>
     <body>
-      <div class="body">
-        {% block body %}
-        {% endblock %}
-      </div>
+      <nav class="navbar sticky-top">
+        <div class="d-flex justify-content-start" style="padding-left: 2em; padding-right: 2em">
+          <a class="navbar-brand" href="#" style="margin: 0;">City3D</a>
+          <ul class="nav-item dropdown" style="padding-left: 0em;">
+            {% if city %}
+            <a class="nav-link dropdown-toggle btn" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ city.name }}
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              {% for list_city in cities %}
+                {% if list_city.state.initials == 'TX' %}
+                  <li><a class="dropdown-item" href="{% url 'hero' list_city.name %}">{{ list_city.name }}, {{ list_city.state.initials }}</a></li>
+                {% endif %}
+              {% endfor %}
+            </ul>
+            {% else %}
+            <a class="nav-link dropdown-toggle btn" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Select
+            </a>
+            {% endif %}
+          </ul>
+        </div>
+      </nav>
+      {% block body %}
+      {% endblock %}
     </body>
+
 </html>
