--- a/city3d/templates/city3d/test.html
+++ b/city3d/templates/city3d/test.html
@@ -2,14 +2,23 @@
 {% load static %}
 
 {% block script %}
-
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
 {% endblock %}
 
 {% block body %}
-  <script src="https://unpkg.com/three@0.126.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://threejs.org/build/three.min.js"></script>
+  <script src="https://threejs.org/examples/js/shaders/CopyShader.js"></script>
+  <script src="https://threejs.org/examples/js/postprocessing/EffectComposer.js"></script>
+  <script src="https://threejs.org/examples/js/postprocessing/RenderPass.js"></script>
+  <script src="https://threejs.org/examples/js/postprocessing/ShaderPass.js"></script>
+  <script src="https://threejs.org/examples/js/postprocessing/OutlinePass.js"></script>
+  <script src="https://threejs.org/examples/js/postprocessing/UnrealBloomPass.js"></script>
+  <script src="https://threejs.org/examples/js/shaders/FXAAShader.js"></script>
+  <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <div id="cube">
-    <script src="../static/city3d/cube.js"></script>
+    <script src="../static/city3d/click.js"></script>
   </div>
 
 {% endblock %}
